--- a/app/src/main/res/layout/activity_product_detail_promo_gratis.xml
+++ b/app/src/main/res/layout/activity_product_detail_promo_gratis.xml
@@ -10,12 +10,12 @@
         android:id="@+id/ib_back_button"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/baseline_close_24"
-        android:background="@color/transparant"
         android:layout_margin="10dp"
-        />
+        android:background="@color/transparant"
+        android:src="@drawable/baseline_close_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <View
         android:id="@+id/v_border"
@@ -64,6 +64,7 @@
         tools:text="Beli 4 gratis 1 buah kardus susu ultra UHT super nikmat rasa coklat dan stoberi"
         android:textSize="18sp"
         android:textColor="@color/gray"
+        android:ellipsize="end"
         app:layout_constraintTop_toBottomOf="@id/tv_gratis_icon"
         app:layout_constraintStart_toStartOf="@id/tv_gratis_icon"
         app:layout_constraintEnd_toStartOf="@id/iv_dropdown"/>
@@ -78,16 +79,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="20dp"/>
 
-    <LinearLayout android:id="@+id/container_rv_list"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_produk_gratis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:animateLayoutChanges="true"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_promo_gratis_product_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_promo_gratis_product_content"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        android:orientation="vertical"
+        android:padding="10dp">
+        <Button
+            android:id="@+id/bt_tutup_gratis_button"
+            app:backgroundTint="@null"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/tutup"
+            android:textColor="@color/teal"
+            android:textStyle="bold"
+            android:paddingVertical="10dp"
+            android:background="@drawable/gratis_product_button_background"
+            />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
