--- a/app/src/main/res/drawable/gratis_product_button_background.xml
+++ b/app/src/main/res/drawable/gratis_product_button_background.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/teal">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/teal" />
+            <corners android:bottomRightRadius="10dp"
+                android:topLeftRadius="10dp"
+                android:bottomLeftRadius="2dp"
+                android:topRightRadius="2dp"/>
+        </shape>
+    </item>
+
+    <item android:id="@android:id/background">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="@color/transparant"/>
     <corners android:bottomRightRadius="10dp"
         android:topLeftRadius="10dp"
@@ -10,4 +23,6 @@
         android:color="@color/teal"
         android:width="2dp"
         />
-</shape>
+        </shape>
+    </item>
+</ripple>
