--- a/app/src/main/res/layout/activity_product_detail_promo_gratis.xml
+++ b/app/src/main/res/layout/activity_product_detail_promo_gratis.xml
@@ -65,6 +65,7 @@
         android:textSize="18sp"
         android:textColor="@color/gray"
         android:ellipsize="end"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tv_gratis_icon"
         app:layout_constraintStart_toStartOf="@id/tv_gratis_icon"
         app:layout_constraintEnd_toStartOf="@id/iv_dropdown"/>
@@ -83,27 +84,30 @@
         android:id="@+id/rv_produk_gratis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_promo_gratis_product_content"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
         <Button
             android:id="@+id/bt_tutup_gratis_button"
-            app:backgroundTint="@null"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/gratis_product_button_background"
+            android:baselineAligned="false"
+            android:paddingVertical="10dp"
             android:text="@string/tutup"
             android:textColor="@color/teal"
             android:textStyle="bold"
-            android:paddingVertical="10dp"
-            android:background="@drawable/gratis_product_button_background"
-            />
+            app:backgroundTint="@null" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
