--- a/app/src/main/res/layout/activity_product_detail_promo_gratis.xml
+++ b/app/src/main/res/layout/activity_product_detail_promo_gratis.xml
@@ -1,84 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cl_product_gratis_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.homepage.components.activity.productdetail.ProductDetailPromoGratisActivity">
 
-    <ImageButton
-        android:id="@+id/ib_back_button"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="10dp"
-        android:background="@color/transparant"
-        android:src="@drawable/baseline_close_24"
-        app:layout_constraintStart_toStartOf="parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <View
-        android:id="@+id/v_border"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:background="@color/light_gray2"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/ib_back_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/tv_gratis_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/gratis_icon_back"
-        android:drawableStart="@drawable/gift_icon_red2"
-        android:paddingHorizontal="10dp"
-        android:paddingVertical="6dp"
-        android:text="@string/gratis"
-        android:textColor="@color/red"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/v_border"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="25dp"/>
-
-    <TextView
-        android:id="@+id/tv_gratis_Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:text="Gratis Produk"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_gratis_icon"
-        app:layout_constraintLeft_toRightOf="@+id/tv_gratis_icon"
-        app:layout_constraintTop_toTopOf="@+id/tv_gratis_icon" />
-
-    <TextView
-        android:id="@+id/tv_promo_gratis_product_content"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        tools:text="Beli 4 gratis 1 buah kardus susu ultra UHT super nikmat rasa coklat dan stoberi"
-        android:textSize="18sp"
-        android:textColor="@color/gray"
-        android:ellipsize="end"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_gratis_icon"
-        app:layout_constraintStart_toStartOf="@id/tv_gratis_icon"
-        app:layout_constraintEnd_toStartOf="@id/iv_dropdown"/>
-
-    <ImageView
-        android:id="@+id/iv_dropdown"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baseline_keyboard_arrow_down_24_gray"
-        app:layout_constraintTop_toTopOf="@id/tv_promo_gratis_product_content"
-        app:layout_constraintBottom_toBottomOf="@id/tv_promo_gratis_product_content"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="20dp"/>
+        android:elevation="0dp"
+        android:background="@color/white"
+       >
+
+        <ImageButton
+            android:id="@+id/ib_back_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="10dp"
+            android:background="@color/transparant"
+            android:src="@drawable/baseline_close_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <View
+            android:id="@+id/v_border"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="@color/light_gray2"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/ib_back_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_gratis_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/gratis_icon_back"
+            android:drawableStart="@drawable/gift_icon_red2"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="6dp"
+            android:text="@string/gratis"
+            android:textColor="@color/red"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/v_border"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="25dp"/>
+
+        <TextView
+            android:id="@+id/tv_gratis_Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:text="Gratis Produk"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_gratis_icon"
+            app:layout_constraintLeft_toRightOf="@+id/tv_gratis_icon"
+            app:layout_constraintTop_toTopOf="@+id/tv_gratis_icon" />
+
+        <TextView
+            android:id="@+id/tv_promo_gratis_product_content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            tools:text="Beli 4 gratis 1 buah kardus susu ultra UHT super nikmat rasa coklat dan stoberi"
+            android:textSize="18sp"
+            android:textColor="@color/gray"
+            android:ellipsize="end"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_gratis_icon"
+            app:layout_constraintStart_toStartOf="@id/tv_gratis_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintEnd_toStartOf="@id/iv_dropdown"/>
+
+        <ImageView
+            android:id="@+id/iv_dropdown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_keyboard_arrow_up_24_gray"
+            app:layout_constraintTop_toTopOf="@id/tv_promo_gratis_product_content"
+            app:layout_constraintBottom_toBottomOf="@id/tv_promo_gratis_product_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_produk_gratis"
@@ -86,7 +103,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_promo_gratis_product_content"/>
+        app:layout_constraintTop_toBottomOf="@id/cl_container"
+        android:elevation="-1dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
