--- a/app/src/main/res/layout/activity_all_banner_list.xml
+++ b/app/src/main/res/layout/activity_all_banner_list.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_scrollFlags="scroll|enterAlways" >
+        app:layout_scrollFlags="scroll|enterAlways">
 
         <include
             android:id="@+id/all_banner_list_toolbar"
@@ -28,7 +28,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_banner_list"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingTop="10dp"
         android:clipToPadding="false"
