--- a/app/src/main/res/layout/item_banner_list.xml
+++ b/app/src/main/res/layout/item_banner_list.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="320dp"
+    android:layout_width="match_parent"
     android:layout_height="160dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="20dp"
-    android:layout_marginVertical="10dp">
+    android:layout_marginVertical="8dp"
+    android:layout_marginHorizontal="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center">
 
         <ImageView
         android:id="@+id/iv_banner_list_image"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="160dp"
         tools:src="@drawable/banner_placeholder"
         android:scaleType="fitXY"/>
