--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -140,6 +140,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:cardCornerRadius="10dp"
                     android:elevation="15dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginHorizontal="15dp">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
