--- a/app/src/main/res/layout/activity_product_list_search_produk.xml
+++ b/app/src/main/res/layout/activity_product_list_search_produk.xml
@@ -60,19 +60,60 @@
         android:id="@+id/cl_kategori_pilihan"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="15dp"
         app:layout_constraintTop_toBottomOf="@id/divider">
 
         <TextView
+            android:id="@+id/tv_title_riwayat_pencarian"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Kategori Pilihan"
+            android:text="@string/riwayat_pencarian"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginStart="@dimen/mrgn_1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_hapus_riwayat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/hapus_riwayat"
+            android:textColor="@drawable/hapus_riwayat_selected"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginEnd="@dimen/mrgn_1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_riwayat_pencarian"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/mrgn_1"
+            app:layout_constraintTop_toBottomOf="@id/tv_title_riwayat_pencarian"/>
+
+        <TextView
+            android:id="@+id/tv_title_kategori_pilihan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/mrgn_1"
+            android:layout_marginEnd="@dimen/mrgn_1"
+            android:text="@string/kategori_pilihan"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/rv_riwayat_pencarian" />
+
+        <FrameLayout
+            android:id="@+id/container_fragment_rv_list_kategori"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tv_title_kategori_pilihan" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
