--- a/app/src/main/res/layout/activity_detail_official_store.xml
+++ b/app/src/main/res/layout/activity_detail_official_store.xml
@@ -203,7 +203,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     app:layout_constraintTop_toBottomOf="@+id/tv_semua_produk"
-                    app:tabMode="fixed" />
+                    app:tabMode="auto" />
 
                 <FrameLayout
                     android:id="@+id/container"
