--- a/app/src/main/res/layout/activity_product_list_penawaran_terbaik.xml
+++ b/app/src/main/res/layout/activity_product_list_penawaran_terbaik.xml
@@ -91,7 +91,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@+id/divider_banner_product_list"
-                    app:tabMode="fixed" />
+                    app:tabMode="auto" />
 
                 <FrameLayout
                     android:id="@+id/container_fragment_penawaran"
