--- a/app/src/main/res/layout/fragment_gratis_produk.xml
+++ b/app/src/main/res/layout/fragment_gratis_produk.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".presentation.homepage.components.fragment.productlist.FragmentGratisProduk">
 
@@ -10,7 +11,8 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tl_gratis_produk"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:tabMode="auto"/>
 
     <FrameLayout
         android:id="@+id/container_fragment_gratis_produk"
