--- a/app/src/main/res/layout/item_product_tebus_murah.xml
+++ b/app/src/main/res/layout/item_product_tebus_murah.xml
@@ -35,7 +35,7 @@
 
     <TextView
         android:id="@+id/tv_nama_product"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ellipsize="end"
@@ -43,7 +43,7 @@
         android:text="DancowDancowDancowDancowDancow"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_image"
         app:layout_constraintTop_toBottomOf="@id/tv_stock_from" />
 
@@ -56,7 +56,7 @@
         android:textColor="@color/red"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/iv_image"
+        app:layout_constraintStart_toEndOf="@id/iv_image"
         app:layout_constraintTop_toBottomOf="@id/tv_nama_product" />
 
     <TextView
@@ -69,7 +69,7 @@
         android:textColor="@color/gray"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_harga_product_primary"
-        app:layout_constraintLeft_toRightOf="@id/tv_harga_product_primary"
+        app:layout_constraintStart_toEndOf="@id/tv_harga_product_primary"
         app:layout_constraintTop_toBottomOf="@id/tv_nama_product" />
 
     <com.google.android.material.divider.MaterialDivider
