--- a/app/src/main/res/layout/fragment_belanja.xml
+++ b/app/src/main/res/layout/fragment_belanja.xml
@@ -16,7 +16,7 @@
         android:backgroundTint="@color/white"
         android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24_blue"
         android:paddingHorizontal="20dp"
-        android:text="Produk rekomendasi untuk anda"
+        android:text="@string/produk_rekomendasi_untuk_anda"
         android:textAllCaps="false"
         android:textColor="@color/teal"
         android:visibility="visible" />
@@ -71,7 +71,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="end|top"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
                 android:contentDescription="@string/cart_image_view"
                 android:src="@drawable/outline_shopping_basket_24" />
 
@@ -107,7 +107,7 @@
             android:drawableTint="@color/teal"
             android:paddingVertical="20dp"
             android:paddingStart="15dp"
-            android:text="Cari produk favorite kamu disini"
+            android:text="@string/cari_produk_favorite_kamu_disini"
             android:textAlignment="textStart"
             android:textAllCaps="false"
             android:textColor="@color/gray2"
@@ -146,7 +146,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="10dp"
-                    android:text="Shopping List"
+                    android:text="@string/shopping_list"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -166,7 +166,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:text="Pilih semua produk (10)"
+                    android:text="@string/pilih_semua_produk_10"
                     android:textColor="@color/black"
                     app:layout_constraintLeft_toRightOf="@id/cb_shopping_list"
                     app:layout_constraintTop_toBottomOf="@id/tv_shopping_list" />
@@ -179,7 +179,7 @@
                     android:background="@color/teal"
                     android:paddingHorizontal="20dp"
                     android:paddingVertical="10dp"
-                    android:text="Silahkan cek list produk yang ingin Anda beli"
+                    android:text="@string/silahkan_cek_list_produk_yang_ingin_anda_beli"
                     android:textAlignment="textStart"
                     android:textColor="@color/white"
                     android:textSize="18sp"
@@ -196,7 +196,7 @@
                     android:backgroundTint="@color/white"
                     android:drawableEnd="@drawable/baseline_keyboard_arrow_up_24_blue"
                     android:paddingHorizontal="20dp"
-                    android:text="Lihat Shopping List"
+                    android:text="@string/lihat_shopping_list"
                     android:textAllCaps="false"
                     android:textColor="@color/teal"
                     android:visibility="gone"
@@ -227,7 +227,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
-                    android:text="Direkomendasikan untuk anda"
+                    android:text="@string/direkomendasikan_untuk_anda"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
