--- a/app/src/main/res/layout/item_product_tebus_murah.xml
+++ b/app/src/main/res/layout/item_product_tebus_murah.xml
@@ -27,7 +27,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
-        android:contentDescription="ImageView Product"
+        android:contentDescription="@string/imageview_product"
         android:src="@drawable/dancow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginTop="10dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="DancowDancowDancowDancowDancow"
+        android:text="@string/judul_barang"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Rp.5000"
+        android:text="@string/rp_5000"
         android:textColor="@color/red"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -63,9 +63,9 @@
         android:id="@+id/tv_harga_product_diskon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        android:text="Rp.8000"
+        android:text="@string/rp_8000"
         android:textColor="@color/gray"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_harga_product_primary"
