--- a/app/src/main/res/layout/activity_official_store_search.xml
+++ b/app/src/main/res/layout/activity_official_store_search.xml
@@ -39,7 +39,7 @@
                 android:drawableStart="@drawable/baseline_search_24"
                 android:drawablePadding="10dp"
                 android:drawableTint="@color/gray"
-                android:hint="Cari"
+                android:hint="@string/cari"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
                 android:maxLines="1"
