--- a/app/src/main/res/layout/activity_product_list_paket.xml
+++ b/app/src/main/res/layout/activity_product_list_paket.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tv_harga_spesial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Paket" />
+        android:text="@string/paket" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tl_paket"
