--- a/app/src/main/res/layout/activity_product_list_penawaran_terbaik.xml
+++ b/app/src/main/res/layout/activity_product_list_penawaran_terbaik.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
-                android:text="Penawaran Terbaik"
+                android:text="@string/penawaran_terbaik"
                 android:textColor="@color/white"
                 android:textSize="22sp"
                 android:textStyle="bold" />
