--- a/app/src/main/res/layout/activity_product_list_search_produk.xml
+++ b/app/src/main/res/layout/activity_product_list_search_produk.xml
@@ -21,8 +21,9 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/baseline_arrow_left_24_gray" />
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/baseline_arrow_left_24_gray"
+            android:contentDescription="@string/back_image_view" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_search_view"
@@ -38,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_search_view"
-                android:hint="Cari Produk di Alfagift"
+                android:hint="@string/cari_produk_di_alfagift"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
                 android:maxLines="1"
