--- a/app/src/main/res/layout/fragment_penawaran_terbaik.xml
+++ b/app/src/main/res/layout/fragment_penawaran_terbaik.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
         android:layout_marginVertical="20sp"
-        android:text="Penawaran Terbaik"
+        android:text="@string/penawaran_terbaik"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
