--- a/app/src/main/res/layout/fragment_pesanan.xml
+++ b/app/src/main/res/layout/fragment_pesanan.xml
@@ -55,7 +55,7 @@
                     android:background="@drawable/shape_submenu_pesanan_item_clicked"
                     android:paddingHorizontal="10dp"
                     android:paddingVertical="5dp"
-                    android:text="Menunggu Pembayaran"
+                    android:text="@string/menunggu_pembayaran"
                     android:textColor="@color/white" />
 
                 <TextView
@@ -66,7 +66,7 @@
                     android:background="@drawable/shape_submenu_pesanan_item"
                     android:paddingHorizontal="10dp"
                     android:paddingVertical="5dp"
-                    android:text="Dalam Proses"
+                    android:text="@string/dalam_proses"
                     android:textColor="@color/teal" />
 
                 <TextView
@@ -77,7 +77,7 @@
                     android:background="@drawable/shape_submenu_pesanan_item"
                     android:paddingHorizontal="10dp"
                     android:paddingVertical="5dp"
-                    android:text="Dikirim"
+                    android:text="@string/dikirim"
                     android:textColor="@color/teal" />
 
                 <TextView
@@ -90,7 +90,7 @@
                     android:focusable="true"
                     android:paddingHorizontal="10dp"
                     android:paddingVertical="5dp"
-                    android:text="Selesai"
+                    android:text="@string/selesai"
                     android:textColor="@color/teal" />
 
                 <TextView
@@ -101,7 +101,7 @@
                     android:background="@drawable/shape_submenu_pesanan_item"
                     android:paddingHorizontal="10dp"
                     android:paddingVertical="5dp"
-                    android:text="Batal"
+                    android:text="@string/batal"
                     android:textColor="@color/teal" />
             </LinearLayout>
 
@@ -111,7 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|center_vertical"
-            android:contentDescription="Alfagift Pesanan"
+            android:contentDescription="@string/alfagift_pesanan"
             android:src="@drawable/alfagift_pesan" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -123,7 +123,7 @@
             android:background="@drawable/detail_button_background"
             android:paddingHorizontal="30dp"
             android:paddingVertical="8dp"
-            android:text="Yuk, Belanja"
+            android:text="@string/yuk_belanja"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="16sp"
