--- a/app/src/main/res/layout/item_brand.xml
+++ b/app/src/main/res/layout/item_brand.xml
@@ -22,7 +22,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
-            android:contentDescription="Brand Logo"
+            android:contentDescription="@string/brand_logo"
             android:src="@drawable/uniliver_logo" />
 
         <View
