--- a/app/src/main/res/layout/item_official_store.xml
+++ b/app/src/main/res/layout/item_official_store.xml
@@ -21,7 +21,8 @@
             android:src="@drawable/dancow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/image_product" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_store_logo"
