--- a/app/src/main/res/layout/item_preview_name_product.xml
+++ b/app/src/main/res/layout/item_preview_name_product.xml
@@ -13,7 +13,7 @@
         android:textColor="@color/black"
         android:drawableStart="@drawable/baseline_search_24"
         android:drawablePadding="20dp"
-        android:text="Free Fire Max, auto Booyah "
+        android:text="@string/judul_barang"
         android:textSize="20sp"
         app:drawableTint="@color/darkGrey"
         app:layout_constraintStart_toStartOf="parent"
