--- a/app/src/main/res/layout/item_product_gratis_product.xml
+++ b/app/src/main/res/layout/item_product_gratis_product.xml
@@ -35,7 +35,7 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/shape_gratis_product"
             android:orientation="horizontal"
-            android:paddingRight="10dp"
+            android:paddingEnd="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_image">
 
@@ -47,7 +47,7 @@
                 android:drawableStart="@drawable/baseline_card_giftcard_24"
                 android:drawablePadding="10dp"
                 android:padding="5dp"
-                android:text="Gratis"
+                android:text="@string/gratis"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
