--- a/app/src/main/res/layout/item_tebus_murah.xml
+++ b/app/src/main/res/layout/item_tebus_murah.xml
@@ -33,8 +33,8 @@
             android:id="@+id/tv_tebus_murah"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="Tebus Murah"
+            android:layout_marginStart="20dp"
+            android:text="@string/tebus_murah"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
