--- a/app/src/main/res/drawable/custom_edit_text_rounded_corner.xml
+++ b/app/src/main/res/drawable/custom_edit_text_rounded_corner.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
             <corners android:radius="12dp" />
-            <stroke android:width="2dp" android:color="@color/black" />
+            <stroke android:width="2dp" android:color="@color/teal" />
         </shape>
     </item>
 
