--- a/app/src/main/res/layout/fragment_input_phone_number.xml
+++ b/app/src/main/res/layout/fragment_input_phone_number.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/red"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/light_gray"
     tools:context=".presentation.authentication.fragment.register.InputPhoneNumberFragment">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@drawable/top_drawable_lists"
+        android:elevation="0dp"
+        android:paddingBottom="10dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <ImageButton
+            android:id="@+id/btn_phone_back"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="@dimen/mrgn_2"
+            android:background="?android:selectableItemBackground"
+            android:contentDescription="@string/back_image_view"
+            android:src="@drawable/arrow_back" />
+    </androidx.appcompat.widget.Toolbar>
     <LinearLayout
-        style="@style/Edit_Text_Container_Style">
+        style="@style/Edit_Text_Container_Style"
+        android:elevation="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="40dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
             android:autofillHints="@string/_081xxxxxxx"
             android:hint="@string/_081xxxxxxx"
