--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -4,13 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/red"
+    android:background="@color/light_gray"
     tools:context=".presentation.authentication.fragment.register.OtpVerificationFragment">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@drawable/top_drawable_lists"
+        android:elevation="0dp"
+        android:paddingBottom="10dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <ImageButton
+            android:id="@+id/btn_otp_back"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="@dimen/mrgn_2"
+            android:background="?android:selectableItemBackground"
+            android:contentDescription="@string/back_image_view"
+            android:src="@drawable/arrow_back" />
+    </androidx.appcompat.widget.Toolbar>
     <LinearLayout
         style="@style/Edit_Text_Container_Style"
+        android:elevation="10dp"
         android:orientation="vertical"
-        android:layout_gravity="top">
+        android:layout_gravity="center">
 
         <TextView
             android:id="@+id/tv_OTP_Title"
@@ -19,7 +39,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="40dp"
             android:text="Verify OTP"
-            android:textColor="@color/gray"
+            android:textColor="@color/black"
             android:textSize="32sp"
             android:textStyle="bold" />
 
@@ -27,27 +47,35 @@
             android:id="@+id/btn_Get_OTP_Code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="60dp"
             android:text="@string/send_otp_code"
-            android:textColor="@color/gray"
+            android:textColor="@color/teal"
+            android:textStyle="bold"
             android:textSize="16sp" />
 
         <com.chaos.view.PinView
             android:id="@+id/pv_otp_code"
             style="@style/PinWidget.PinView"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:cursorVisible="true"
             android:inputType="number"
             android:itemBackground="@color/light_white"
-            app:cursorColor="@color/black"
             android:textColor="@color/black"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            app:itemHeight="45dp"
+            app:itemWidth="40dp"
+            app:cursorColor="@color/black"
             app:hideLineWhenFilled="true"
             app:itemCount="6"
-            app:itemRadius="5dp"
-            app:itemWidth="35dp"
-            app:lineColor="@color/black" />
+            app:itemRadius="10dp"
+            app:lineColor="@color/gray" />
+        <TextView
+            android:id="@+id/tv_otp_error"
+            style="@style/Text_View_Error_Message_Style"
+            android:layout_marginStart="30dp" />
     </LinearLayout>
 </FrameLayout>
